Fix file change list overflowing with large file names
- Prevent file list getting too large with large file names: will be at most 30% of screen width.
- Also Fixes file headers getting shrunk when file list is large

--- a/src/app/views/repository/file.component.scss
+++ b/src/app/views/repository/file.component.scss
@@ -1,8 +1,8 @@
 @import "themes.scss";;
 
 .file-panel {
-  width: 100%;
   height: 100%;
+
   flex: 1 1 auto;
 
   display: flex;
@@ -13,73 +13,10 @@
 
   border: 1px solid var(--surface-surround);
 
-  .modified-files-header {
-    flex: initial;
-
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .header {
-    flex: 1 1 auto;
-    text-align: center;
-    min-height: 35px;
-
-    margin: 0;
-
-    background-color: var(--surface);
-
-    border-width: 1px 0 1px 0;
-    border-style: solid;
-    border-color: var(--surface-surround);
-
-    font-size: 1.5em;
-    font-weight: bold;
-  }
-
   .empty-message {
     padding: 20px;
     text-align: center;
   }
-
-  .file-list {
-    overflow-y: scroll;
-    flex-grow: inherit;
-  }
-
-  .file {
-    width: 100% - 1;
-    height: 10%;
-    position: relative;
-    overflow: hidden;
-    border: 1px solid var(--surface-surround);
-
-    &:hover {
-      opacity: 0.8;
-    }
-
-    p {
-      display: inline-block;
-
-      width: 80%;
-      margin-left: 10px;
-
-      color: var(--on-background);
-
-      white-space: nowrap;
-
-      vertical-align: middle;
-      text-overflow: ellipsis;
-
-      overflow: hidden;
-    }
-
-    input {
-      vertical-align: middle;
-    }
-  }
-
 
   .commit-panel {
     flex: initial;
@@ -127,17 +64,44 @@
 }
 
 // For the header row for staged files
-.staged-files-header {
+.files-header {
+  flex: initial;
+
   display: flex;
   flex-direction: row;
-}
-.stage-all-btn{
-  margin-right: 0px;
-  flex: initial;
+
+  .stage-all-btn{
+    margin-right: 0px;
+    flex: initial;
+  }
+
+  .header {
+    flex: 1 1 auto;
+    text-align: center;
+    min-height: 35px;
+
+    margin: 0;
+
+    background-color: var(--surface);
+
+    border-width: 1px 0 1px 0;
+    border-style: solid;
+    border-color: var(--surface-surround);
+
+    font-size: 1.5em;
+    font-weight: bold;
+  }
 }
 
 // For the file selection lines
+.file-list {
+  overflow-y: auto;
+  flex: 1 1; // No flex-basis as the file list should be always equal to the amount of remaining space
+}
 .input-group {
+  width: 100%;
+  flex-wrap: nowrap;
+
   // Stage file checkbox
   .input-group-prepend .input-group-text {
     background-color: var(--surface-highlight);
@@ -156,11 +120,15 @@
     background-color: var(--secondary);
     border-color: var(--surface-surround);
 
-    // Take up rest of width
-    flex: 1 1 auto;
+    // Prevent the label from moving to the next line if theres not enough space (will shrink instead)
+    flex: 1;
+
+    // Allow the text to wrap over multiple lines, so that we can shrink down as far as possible
+    min-width: 0;
+    overflow-wrap: break-word;
 
     &:active, &.active {
-      font-weight: bold;
+      text-decoration: underline;
     }
 
     // Hidden radio control
